CLAS-160: Passing evidence IDs in request body
